# Lampsz-App

./: .codeclimate.yml  .dockerignore  .env.example  .eslintrc.yml  .gitignore  .pre-commit-config.yaml  Procfile  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  service.yml  setup.cfg  tsconfig.json  webpack.config.js
.docker/: Dockerfile  entrypoint.sh
.github/workflows/: cd.yml  ci.yml
apps/: README.md
client/src/: App.tsx  index.tsx
client/src/actions/: auth.ts  marketingTask.ts  profile.ts  taskApplication.ts  tasks.ts
client/src/components/: Loading.tsx  Nav.tsx  PanelTitle.tsx  Routes.tsx  TabPanel.tsx
client/src/hooks/: AuthHook.tsx  ToastHook.tsx
client/src/utils/: paths.ts  sharedProps.ts  sharedStyles.ts  types.ts  utils.ts
client/tests/: App.test.tsx  Auth.test.tsx  Home.test.tsx  MarketingTaskDetail.test.tsx  MyApplications.test.tsx  MyMarketingTasks.test.tsx  Nav.test.tsx  utils.test.ts
docs/: README.md  write_up.md
lampsz/: asgi.py  settings.py  urls.py  wsgi.py
lampsz/apis/: admin.py  apps.py  mixins.py  models.py  serializers.py  services.py  storage_backends.py  tests.py  tests_file.py  urls.py  utils.py  views.py
lampsz/apis/migrations/: 0001_initial.py  0002_category_location_remove_influencer_tiktokuserid_and_more.py  0002_influencer_age_influencer_likes_and_more.py  0002_user_is_influencer.py  0003_alter_company_about_alter_company_founded_and_more.py  0003_influencer_shortbio.py  0003_marketingtask.py  0003_rename_about_influencer_description_and_more.py  0004_alter_company_about_alter_company_founded.py  0004_company_shortbio.py  0004_rename_about_company_description_company_shortbio_and_more.py  0005_alter_company_location.py  0005_remove_influencer_tiktokusername.py  0006_company_industry_alter_user_is_influencer.py  0006_marketingtask.py  0006_marketingtask_image.py  0007_remove_company_founded.py  0008_alter_company_location.py  0010_marketingtask_image.py  (+15 more)
lampsz/core/: apps.py  tests.py  views.py
lampsz/frontend/: apps.py  urls.py
lampsz/settings/: base.py  local.py  production.py
lampszapp/: asgi.py  settings.py  urls.py  wsgi.py
script/: bootstrap  dependencies  migrate
scripts/: bootstrap
(+92 files in other folders)
