[tool.poetry]
name = "lampsz-app"
version = "0.1.0"
description = ""
authors = ["Le Rong Shi <shilerong@gmail.com>"]
readme = "README.md"
packages = [{include = "lampsz_app"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
flake8 = "^5.0.4"
mypy = "^0.982"
flake8-isort = "^5.0.0"
black = "^22.10.0"
pre-commit = "^2.20.0"
psycopg2 = "^2.9.5"
django-environ = "^0.9.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
